--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -144,14 +144,44 @@ services:
       - PYTHONPATH=/app
       - DATABASE_URL=postgresql://podcast_user:podcast_pass@postgres:5432/podcast_ai
       - REDIS_URL=redis://redis:6379
+      - LOCAL_STORAGE_PATH=/app/storage
+      - LOCAL_SERVER_URL=http://nginx:8080
     depends_on:
       postgres:
         condition: service_healthy
       redis:
         condition: service_healthy
+      nginx:
+        condition: service_started
     volumes:
       - ./services:/app/services
       - ./shared:/app/shared
+      - storage_data:/app/storage
+
+  # Local Podcast Host Service
+  podcast-host:
+    build: ./services/podcast-host
+    environment:
+      - DATABASE_URL=postgresql://podcast_user:podcast_pass@postgres:5432/podcast_ai
+      - LOCAL_STORAGE_PATH=/app/storage
+      - LOCAL_SERVER_URL=http://nginx:8080
+    depends_on:
+      postgres:
+        condition: service_healthy
+    volumes:
+      - ./services:/app/services
+      - storage_data:/app/storage
+
+  # Nginx for serving static files and podcast content
+  nginx:
+    image: nginx:alpine
+    ports:
+      - "8080:8080"
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf:ro
+      - storage_data:/app/storage
+    depends_on:
+      - podcast-host
 
   # Ollama for local LLM inference
   ollama:
@@ -211,3 +241,4 @@ services:
 volumes:
   postgres_data:
   ollama_data:
+  storage_data:
