--- a/services/podcast-host/Dockerfile
+++ b/services/podcast-host/Dockerfile
@@ -11,8 +11,7 @@ RUN apt-get update && apt-get install -y \
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copy shared modules and service code
-COPY ../shared /app/shared
+# Copy service code
 COPY . /app
 
 # Create storage directory
