--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -86,6 +86,8 @@ services:
   # Text Generation Service
   text-generation:
     build: ./services/text-generation
+    ports:
+      - "8002:8002"
     environment:
       - PYTHONPATH=/app
       - DATABASE_URL=postgresql://podcast_user:podcast_pass@postgres:5432/podcast_ai
@@ -105,6 +107,9 @@ services:
   # Writer Service
   writer:
     build: ./services/writer
+    ports:
+      - "8003:8003"
+    cpus: "5.0"
     environment:
       - PYTHONPATH=/app
       - DATABASE_URL=postgresql://podcast_user:podcast_pass@postgres:5432/podcast_ai
@@ -124,6 +129,12 @@ services:
   # Presenter Service
   presenter:
     build: ./services/presenter
+    ports:
+      - "8004:8004"
+    # Allow presenter to use up to 5 CPUs and spawn 5 workers
+    cpus: "5.0"
+    command: uvicorn main:app --host 0.0.0.0 --port 8004 --workers 5
+    user: "0"
     environment:
       - PYTHONPATH=/app
       - DATABASE_URL=postgresql://podcast_user:podcast_pass@postgres:5432/podcast_ai
@@ -136,6 +147,7 @@ services:
     volumes:
       - ./services:/app/services
       - ./shared:/app/shared
+      - storage_data:/app/storage
 
   # Publishing Service
   publishing:
@@ -174,6 +186,8 @@ services:
   # Ollama for local LLM inference
   ollama:
     image: ollama/ollama:latest
+    # Allow Ollama to use up to 5 CPUs
+    cpus: "5.0"
     volumes:
       - ollama_data:/root/.ollama
     environment:
@@ -230,7 +244,7 @@ services:
   nginx:
     image: nginx:alpine
     ports:
-      - "8080:8080"
+      - "8090:8080"
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf:ro
       - storage_data:/app/storage:ro
