Refactor Docker configurations and enhance service functionality
- Removed deprecated services from docker-compose.override.yml to streamline the setup.
- Updated the ai-overseer service Dockerfile to improve build context and file structure.
- Added new Celery tasks for creating collections from unreviewed articles and sending articles to the reviewer service, enhancing the review workflow.
- Implemented a manual refresh endpoint for news feeds in the API gateway, allowing for on-demand updates.
- Enhanced the collections management by introducing a new Collection model and updating related database interactions.
- Improved templates across the API gateway for better navigation and user experience, including links to news feeds and collections.

--- a/services/ai-overseer/Dockerfile
+++ b/services/ai-overseer/Dockerfile
@@ -13,6 +13,7 @@ RUN pip install --no-cache-dir -r requirements.txt
 
 # Copy service code
 COPY . .
+COPY ../shared ./shared
 
 # Create non-root user
 RUN useradd --create-home --shell /bin/bash app && chown -R app:app /app
