Refactor Docker configurations and enhance service functionality
- Removed deprecated services from docker-compose.override.yml to streamline the setup.
- Updated the ai-overseer service Dockerfile to improve build context and file structure.
- Added new Celery tasks for creating collections from unreviewed articles and sending articles to the reviewer service.
- Implemented a manual refresh endpoint for news feeds in the API gateway, allowing for dynamic updates.
- Enhanced the collections management by introducing a new Collection model and updating related database schemas.
- Improved user interface by adding links to news feed and collections in various templates for better navigation.

--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   news-feed:
     ports:
@@ -7,8 +5,8 @@ services:
 
   reviewer:
     build:
-      context: .
-      dockerfile: services/reviewer/Dockerfile
+      context: ./services/reviewer
+      dockerfile: Dockerfile
     ports:
       - 8013:8008
     environment:
@@ -28,8 +26,8 @@ services:
 
   editor:
     build:
-      context: .
-      dockerfile: services/editor/Dockerfile
+      context: ./services/editor
+      dockerfile: Dockerfile
     ports:
       - 8009:8009
     environment:
@@ -48,8 +46,8 @@ services:
 
   collections:
     build:
-      context: .
-      dockerfile: services/collections/Dockerfile
+      context: ./services/collections
+      dockerfile: Dockerfile
     ports:
       - 8014:8011
     depends_on:
