Update Docker configurations and enhance AI persona generation features
- Changed command in docker-compose.override.yml to run main.py instead of main_enhanced.py.
- Updated port mapping for ai-overseer service from 8012:8012 to 8006:8006.
- Modified environment variables in docker-compose.yml to use Ollama service instead of vLLM, including base URL and model names.
- Removed vLLM service configuration and replaced it with Ollama service settings.
- Added new API endpoints for managing writer personas, including auto-generation and CRUD operations.
- Enhanced error handling in persona generation functions to improve robustness.
- Updated dashboard templates to include links for managing writers and integrated recent activity feed for better user experience.

--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -64,9 +64,9 @@ services:
     build:
       context: ./services/ai-overseer
       dockerfile: Dockerfile
-    command: python main_enhanced.py
+    command: python main.py
     ports:
-      - 8012:8012
+      - 8012:8006
     depends_on:
       - reviewer
       - editor
