Enhance collection management and reviewer service functionality
- Updated docker-compose.yml to add an editor service for managing collections.
- Adjusted REVIEWER_CONF_THRESHOLD from 0.85 to 0.4 for improved confidence scoring.
- Introduced new Celery task to update collection status based on article count.
- Enhanced article collection creation logic to group reviewed articles by topic.
- Added API endpoints for managing collections, including creation and editing.
- Updated reviewer dashboard to reflect new thresholds and added queue status endpoint.
- Improved error handling and logging across various services for better traceability.

--- a/services/presenter/Dockerfile
+++ b/services/presenter/Dockerfile
@@ -1,4 +1,6 @@
-FROM python:3.11-slim
+## CUDA-enabled PyTorch base (adjust tag to your host driver/CUDA runtime)
+## This image includes torch/torchaudio with CUDA preinstalled
+FROM pytorch/pytorch:2.3.1-cuda12.1-cudnn8-runtime
 
 WORKDIR /app
 
@@ -6,19 +8,34 @@ WORKDIR /app
 RUN apt-get update && apt-get install -y \
     gcc \
     ffmpeg \
+    git \
     curl \
     && rm -rf /var/lib/apt/lists/*
 
 # Copy requirements and install Python dependencies
-COPY requirements.txt .
-RUN pip install --no-cache-dir -r requirements.txt
+COPY requirements.txt ./requirements.txt
+RUN pip install --no-cache-dir -r requirements.txt \
+    && pip install --no-cache-dir git+https://github.com/huggingface/transformers.git \
+    && pip install --no-cache-dir hf_transfer
 
 # Copy service code
 COPY . .
 
+# If the repository includes a local VibeVoice/ directory, make it importable
+# and optionally install its Python package if present
+ENV PYTHONPATH=/app:/app/shared:/app/services/presenter:/app/VibeVoice:${PYTHONPATH}
+RUN if [ -f /app/VibeVoice/setup.py ] || [ -f /app/VibeVoice/pyproject.toml ]; then \
+      pip install --no-cache-dir -e /app/VibeVoice; \
+    else \
+      echo "VibeVoice local package not detected; will load from HuggingFace"; \
+    fi
+
 # Create non-root user
 RUN useradd --create-home --shell /bin/bash app && chown -R app:app /app
 USER app
+
+# Ensure we run from /app where main.py exists when building from ./services/presenter
+WORKDIR /app
 
 EXPOSE 8004
 
