--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -93,7 +93,7 @@ services:
       - OLLAMA_BASE_URL=http://ollama:11434
       - LIGHT_REVIEWER_URL=http://light-reviewer:8000
       - HEAVY_REVIEWER_URL=http://heavy-reviewer:8000
-      - REVIEWER_CONF_THRESHOLD=0.85
+      - REVIEWER_CONF_THRESHOLD=0.4
     depends_on:
       postgres:
         condition: service_healthy
@@ -210,6 +210,24 @@ services:
       - ./services:/app/services
       - ./shared:/app/shared
 
+  # Editor Service
+  editor:
+    build: ./services/editor
+    ports:
+      - "8009:8009"
+    environment:
+      - PYTHONPATH=/app
+      - DATABASE_URL=postgresql://podcast_user:podcast_pass@postgres:5432/podcast_ai
+      - OLLAMA_BASE_URL=http://ollama:11434
+    depends_on:
+      postgres:
+        condition: service_healthy
+      ollama:
+        condition: service_started
+    volumes:
+      - ./services:/app/services
+      - ./shared:/app/shared
+
   # Presenter Service
   presenter:
     build: ./services/presenter
@@ -223,6 +241,18 @@ services:
       - PYTHONPATH=/app
       - DATABASE_URL=postgresql://podcast_user:podcast_pass@postgres:5432/podcast_ai
       - REDIS_URL=redis://redis:6379
+      - USE_VIBEVOICE=true
+      - HF_HOME=/app/.cache/huggingface
+      - HF_HUB_ENABLE_HF_TRANSFER=1
+      - NVIDIA_VISIBLE_DEVICES=all
+      - NVIDIA_DRIVER_CAPABILITIES=compute,utility
+    deploy:
+      resources:
+        reservations:
+          devices:
+            - capabilities: [gpu]
+    # Enable NVIDIA GPU in Compose (Docker Engine with NVIDIA toolkit)
+    runtime: nvidia
     depends_on:
       postgres:
         condition: service_healthy
@@ -232,6 +262,7 @@ services:
       - ./services:/app/services
       - ./shared:/app/shared
       - storage_data:/app/storage
+      - hf_cache:/app/.cache/huggingface
 
   # Publishing Service
   publishing:
@@ -346,3 +377,4 @@ volumes:
   postgres_data:
   ollama_data:
   storage_data:
+  hf_cache:
