Refactor TTS model loading and update requirements
- Updated the TTS model loading process to utilize AutoModelForCausalLM for improved compatibility.
- Removed unnecessary imports and streamlined error handling for model loading.
- Added 'diffusers' package to requirements for enhanced functionality.

--- a/services/presenter/requirements.txt
+++ b/services/presenter/requirements.txt
@@ -13,6 +13,7 @@ transformers>=4.42.0
 accelerate>=0.33.0
 safetensors>=0.4.3
 sentencepiece>=0.2.0
+diffusers>=0.27.0
 librosa==0.10.1
 soundfile==0.12.1
 numpy==1.24.3
