Enhance user management and update TTS model configuration
- Added user management endpoints for creating, listing, updating, and deleting users, including password management.
- Integrated user authentication with hashed passwords for improved security.
- Updated TTS model configuration in docker-compose.yml and presenter service to use the new HF_MODEL_ID for VibeVoice.
- Enhanced dashboard templates to include links to the new admin panel for user management.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -247,7 +247,7 @@ services:
       - NVIDIA_VISIBLE_DEVICES=all
       - NVIDIA_DRIVER_CAPABILITIES=compute,utility
       - TTS_BACKEND=hf
-      - HF_MODEL_ID=aoi-ot/VibeVoice-Large
+      - HF_MODEL_ID=microsoft/VibeVoice-1.5B
     deploy:
       resources:
         reservations:
